fixed make command option

--- a/.github/workflows/dime-golang-ci.yml
+++ b/.github/workflows/dime-golang-ci.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Install go modules
         run: |
-          make tool-install
+          make tools-install
           make tidy
 
   unit-test:
