--- a/.github/workflows/dime-golang-ci.yml
+++ b/.github/workflows/dime-golang-ci.yml
@@ -19,6 +19,9 @@ on:
 jobs:
   setup:
     runs-on: ubuntu-latest
+    env: 
+      GOPRIVATE: github.com/kkp-dfs/*
+      GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
     steps:
       - name: Checkout current branch
         uses: actions/checkout@v2
@@ -32,7 +35,7 @@ jobs:
 
       - name: Merge no commit and no fast-forward
         run: |
-          git config --global url.https://${{ github.token }}@github.com/.insteadOf https://github.com/
+          git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
           git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
           git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
           git fetch
@@ -60,6 +63,9 @@ jobs:
     name: Run unit testing
     needs: setup
     runs-on: ubuntu-latest
+    env: 
+      GOPRIVATE: github.com/kkp-dfs/*
+      GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
     steps:
       - name: Checkout current branch
         uses: actions/checkout@v2
@@ -73,7 +79,7 @@ jobs:
 
       - name: Merge no commit and no fast-forward
         run: |
-          git config --global url.https://${{ github.token }}@github.com/.insteadOf https://github.com/
+          git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
           git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
           git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
           git fetch
@@ -107,6 +113,9 @@ jobs:
     name: Run integration test
     needs: setup
     runs-on: ubuntu-latest
+    env: 
+      GOPRIVATE: github.com/kkp-dfs/*
+      GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
     steps:
       - name: Checkout current branch
         uses: actions/checkout@v2
@@ -120,7 +129,7 @@ jobs:
 
       - name: Merge no commit and no fast-forward
         run: |
-          git config --global url.https://${{ github.token }}@github.com/.insteadOf https://github.com/
+          git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
           git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
           git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
           git fetch
