--- a/.github/workflows/dime-golang-ci.yml
+++ b/.github/workflows/dime-golang-ci.yml
@@ -215,7 +215,7 @@ jobs:
             type=ref,event=pr,suffix=-latest
             type=ref,event=pr,suffix=-{{ date 'YYYYMMDD-HHmmss' }}
             type=ref,event=branch,pattern=main,suffix=-{{ date 'YYYYMMDD-HHmmss' }}
-            type=raw,event=branch,pattern=main,value=latest
+            type=ref,event=branch,pattern=main,value=latest
 
       - name: Build & push docker images
         uses: docker/build-push-action@v2
