--- a/.github/workflows/dime-golang-ci.yml
+++ b/.github/workflows/dime-golang-ci.yml
@@ -39,6 +39,11 @@ jobs:
 
       - name: Merge no commit and no fast-forward
         run: |
+          cat <<EOF > .netrc
+          machine github.com
+            login $GH_ACCESS_TOKEN
+            password x-oauth-basic
+          EOF
           git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
           git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
           git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
@@ -53,6 +58,7 @@ jobs:
             ~/go/pkg/mod
             ~/go/bin
             ./vendor
+            ./.netrc
           key: ${{ runner.os }}-go-${{ inputs.repository }}-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-${{ inputs.repository }}-
@@ -83,7 +89,6 @@ jobs:
 
       - name: Merge no commit and no fast-forward
         run: |
-          git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
           git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
           git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
           git fetch
@@ -97,6 +102,7 @@ jobs:
             ~/go/pkg/mod
             ~/go/bin
             ./vendor
+            ./.netrc
           key: ${{ runner.os }}-go-${{ inputs.repository }}-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-${{ inputs.repository }}-
@@ -135,7 +141,6 @@ jobs:
 
       - name: Merge no commit and no fast-forward
         run: |
-          git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
           git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
           git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
           git fetch
@@ -149,6 +154,7 @@ jobs:
             ~/go/pkg/mod
             ~/go/bin
             ./vendor
+            ./.netrc
           key: ${{ runner.os }}-go-${{ inputs.repository }}-${{ hashFiles('**/go.sum') }}
           restore-keys: |
             ${{ runner.os }}-go-${{ inputs.repository }}-
@@ -180,11 +186,24 @@ jobs:
 
       - name: Merge no commit and no fast-forward
         run: |
-          git config --global url.https://$GH_ACCESS_TOKEN@github.com/.insteadOf https://github.com/
           git config user.name "$(git --no-pager log --format=format:'%an' -n 1)"
           git config user.email "$(git --no-pager log --format=format:'%ae' -n 1)"
           git fetch
           git merge --no-commit --no-ff ${{ inputs.target_ref }}
+
+      - name: Cache module and tools
+        uses: actions/cache@v2
+        with:
+          path: |
+            ~/.cache/go-build
+            ~/go/pkg/mod
+            ~/go/bin
+            ./vendor
+            ./.netrc
+          key: ${{ runner.os }}-go-${{ inputs.repository }}-${{ hashFiles('**/go.sum') }}
+          restore-keys: |
+            ${{ runner.os }}-go-${{ inputs.repository }}-
+            ${{ runner.os }}-go-
 
       - name: Get ECR details
         id: ecr
