--- a/.github/workflows/dime-golang-ci.yml
+++ b/.github/workflows/dime-golang-ci.yml
@@ -25,14 +25,14 @@ jobs:
     runs-on: ubuntu-latest
     env: 
       GOPRIVATE: github.com/kkp-dfs/*
-      GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
     steps:
       - name: Checkout base branch
-        uses: ./dime-golang-setup.yml
+        uses: dime-kkp/dime-actions-workflows/merge-test-pr@v1
         with:
           repository: ${{ inputs.repository }}
           base_ref: ${{ inputs.base_ref }}
           target_ref: ${{ inputs.target_ref }}
+          gh_access_token: ${{ secrets.GH_ACCESS_TOKEN }}
 
       - name: Install go modules
         run: |
@@ -45,14 +45,14 @@ jobs:
     runs-on: ubuntu-latest
     env: 
       GOPRIVATE: github.com/kkp-dfs/*
-      GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
     steps:
       - name: Checkout base branch
-        uses: ./dime-golang-setup.yml
+        uses: dime-kkp/dime-actions-workflows/merge-test-pr@v1
         with:
           repository: ${{ inputs.repository }}
           base_ref: ${{ inputs.base_ref }}
           target_ref: ${{ inputs.target_ref }}
+          gh_access_token: ${{ secrets.GH_ACCESS_TOKEN }}
 
       - name: Run test-cases
         run: |
@@ -73,14 +73,14 @@ jobs:
     runs-on: ubuntu-latest
     env: 
       GOPRIVATE: github.com/kkp-dfs/*
-      GH_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
     steps:
       - name: Checkout base branch
-        uses: ./dime-golang-setup.yml
+        uses: dime-kkp/dime-actions-workflows/merge-test-pr@v1
         with:
           repository: ${{ inputs.repository }}
           base_ref: ${{ inputs.base_ref }}
           target_ref: ${{ inputs.target_ref }}
+          gh_access_token: ${{ secrets.GH_ACCESS_TOKEN }}
 
       - name: Run test-cases
         run: |
