--- a/.github/workflows/dime-golang-ci.yml
+++ b/.github/workflows/dime-golang-ci.yml
@@ -27,7 +27,7 @@ jobs:
       GOPRIVATE: github.com/kkp-dfs/*
     steps:
       - name: Checkout base branch
-        uses: dime-kkp/dime-actions-workflows/merge-test-pr@v1
+        uses: kkp-dfs/dime-action-golang-setup@v1
         with:
           repository: ${{ inputs.repository }}
           base_ref: ${{ inputs.base_ref }}
@@ -47,7 +47,7 @@ jobs:
       GOPRIVATE: github.com/kkp-dfs/*
     steps:
       - name: Checkout base branch
-        uses: dime-kkp/dime-actions-workflows/merge-test-pr@v1
+        uses: kkp-dfs/dime-action-golang-setup@v1
         with:
           repository: ${{ inputs.repository }}
           base_ref: ${{ inputs.base_ref }}
@@ -75,7 +75,7 @@ jobs:
       GOPRIVATE: github.com/kkp-dfs/*
     steps:
       - name: Checkout base branch
-        uses: dime-kkp/dime-actions-workflows/merge-test-pr@v1
+        uses: kkp-dfs/dime-action-golang-setup@v1
         with:
           repository: ${{ inputs.repository }}
           base_ref: ${{ inputs.base_ref }}
@@ -100,25 +100,13 @@ jobs:
     needs: [unit-test]
     runs-on: [self-hosted, linux]
     steps:
-      - name: Checkout base branch
-        uses: ./dime-golang-setup.yml
+      - name: Checkout and merge PR to base branch
+        uses: kkp-dfs/dime-action-merge-test-pr@v1
         with:
           repository: ${{ inputs.repository }}
           base_ref: ${{ inputs.base_ref }}
           target_ref: ${{ inputs.target_ref }}
-
-      - name: Get ECR details
-        id: ecr
-        run: |
-          REPOSITORY=$(aws ecr describe-repositories --region ap-southeast-1 --output text \
-          --query 'repositories[].repositoryUri' --repository-name '${{ inputs.repository }}')
-          TOKEN=$(aws ecr get-authorization-token --region ap-southeast-1 --output text \
-          --query 'authorizationData[].authorizationToken' | base64 -d | cut -d: -f2)
-
-          echo "::add-mask::$TOKEN"
-          echo "::set-output name=token::$TOKEN"
-          echo "::set-output name=registry::$(echo $REPOSITORY | sed 's|${{ inputs.repository }}||')"
-          echo "::set-output name=repository::$REPOSITORY"
+          gh_access_token: ${{ secrets.gh_access_token }}
 
       - name: Login to ECR
         uses: docker/login-action@v1
