Fix dependencies of node build

--- a/.github/workflows/dime-node-ci.yml
+++ b/.github/workflows/dime-node-ci.yml
@@ -59,7 +59,7 @@ jobs:
 
   build:
     name: Build & push docker images to registry
-    needs: [unit-test]
+    needs: [lint]
     runs-on: [self-hosted, linux]
     steps:
       - name: Checkout and merge PR to base branch
