--- a/docker-build-push/action.yml
+++ b/docker-build-push/action.yml
@@ -41,8 +41,8 @@ runs:
         tags: |
           type=ref,event=pr,suffix=-latest
           type=ref,event=pr,suffix=-{{ date 'YYYYMMDD-HHmmss' }}
-          type=ref,event=branch,pattern=main,suffix=-{{ date 'YYYYMMDD-HHmmss' }}
-          type=ref,event=branch,pattern=main,value=latest
+          type=ref,event=branch,suffix=-{{ date 'YYYYMMDD-HHmmss' }}
+          type=ref,event=branch
 
     - name: Build & push docker images
       uses: docker/build-push-action@v2
